--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "UnblockEm",
-	"version": "1.0",
+	"version": "2.0",
 
 	"description": "Close paywalls, sign up modals, and adblocker stops",
 
@@ -28,7 +28,7 @@
 
 	"content_scripts": [
 		{
-			"matches":["*://*.quora.com/*"],
+			"matches":["*://*.quora.com/*", "*://*.businessinsider.com/*"],
 			"js": ["tooltip.js"],
 			"run_at": "document_end"
 		}
